import { PerformanceReport } from './PerformanceReport';

export class ReportGenerator {
  generatePerformanceReport(): PerformanceReport {
    // TODO: implement
    throw new Error('Not implemented');
  }

  generateErrorSummary(): string {
    // TODO: implement
    return '';
  }
}
